--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@
   box-sizing: border-box;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
+  width: 0;
+  background: transparent;
 }
 
 
