--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -4,6 +4,9 @@
     justify-content: center;
     background: rgb(47, 255, 217);
     display: flex;
+    position: absolute;
+    z-index: 5;
+    width: 100%;
 }
 
 #navbar ul {
@@ -54,8 +57,6 @@
         width: 100%;
         margin-top: 10vh;
         border-bottom: 1px solid black;
-
-
     }
 
     #navbar ul li {
@@ -66,11 +67,18 @@
         line-height: 5vh;
         border-top: 1px solid black;
 
-
+    }
+    #navbar ul li a:is(:link,:active,:visited).active ,#navbar ul li:has(a.active){
+        color: aqua;
+    }
+    
+    #navbar ul li:hover a{
+        color: aqua;
     }
 
     #navbar.active {
         right: 0px;
+        
     }
 
 
@@ -106,10 +114,9 @@
     #navbar .drop .sub-menu {
         display: flex;
         flex-direction: column;
-        transition: 0.3s ease-in-out;
-
+        
     }
-
+    
 
     #navbar ul li i {
         position: absolute;
@@ -133,19 +140,24 @@
         transform: translateX(-50%);
         min-width: 20rem;
         margin: 0;
-        top: 15vh;
-        display: none;
-        transition: all .3s linear;
+        top: 17vh;
+        display: flex;
+        transition: 0.3s ease-in;
         background-color: aqua;
         align-items: center;
         justify-content: center;
         padding: 0;
         list-style-type: none;
-        transition: 0.3s ease-in-out;
         border-bottom: 1px solid black;
+        opacity: 0;
+        visibility: hidden;
 
 
     }
+    #navbar ul li a:is(:link,:active,:visited).active{
+        color: black;
+    }
+   
 
     #navbar .drop-down li {
 
@@ -157,17 +169,24 @@
         border-left: 1px solid black;
         border-right: 1px solid black;
 
-
     }
 
     #navbar .drop-down li:hover {
         background: white;
         cursor: pointer;
+        transition: all .2s linear;
 
     }
 
     #navbar ul li:hover>.drop-down {
-        display: flex;
+        opacity: 1;
+        top: 15vh;
+        visibility: visible;
+    }
+    
+    #navbar ul li a {
+        font-weight: 600;
+        font-size: large;  
     }
 
     #navbar .drop {
@@ -181,6 +200,10 @@
         color: rgb(21, 21, 22);
         cursor: pointer;
     }
+    #navbar ul li:hover i{
+        color: black;
+        
+    }
     #navbar ul li:hover{
         cursor: pointer;
     }
@@ -189,3 +212,4 @@
     }
 
 }
+
